// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render toggleGridButton component render component with props 1`] = `
<button
  className="testClass"
  onClick={[Function]}
  type="button"
>
  <span
    className="toggleGridButtonMask"
  />
</button>
`;

exports[`render toggleGridButton component render component without props 1`] = `
<button
  className="undefined"
  onClick={[Function]}
  type="button"
>
  <span
    className="toggleGridButtonMask"
  />
</button>
`;
